# llm-cpp-toolkit

./: .gitignore  .npmignore  AGENTS.md  CMAKE_GUIDANCE.md  DISTRIBUTION.md  LICENSE  QUICKSTART.md  README.md  TASKS.md  build-packages.sh  build_manager.py  flake.nix  install.sh  llmtk  package.json  pyproject.toml  test_sarif_functionality.py
.github/workflows/: release.yml
appimage/: AppImageBuilder.yml  build-appimage.sh
cli/: llmtk
containers/: Dockerfile  devcontainer.json
docs/: COOKBOOK.md  INSTALLATION.md  INSTALLATION_METHODS.md  PREFLIGHT.md  PRIVACY.md  QUICKSTART.md  README.md  REFERENCE.md  SARIF_GUIDE.md  TUTORIAL.md
examples/: llmtk-gate.yaml
exports/: context.json  context_20250918_025155.json  doctor.json
flatpak/: build-flatpak.sh  io.github.gregvw.llm-cpp-toolkit.desktop  io.github.gregvw.llm-cpp-toolkit.yml
homebrew/: llm-cpp-toolkit.rb
improvement_ideas/: EXTENSIONS.md  LLMTK_REFACTOR_PLAN.md  LLMTK_TASKS_1.md  LLMTK_TASKS_2.md  PREFLIGHT_PLAN.md  QUOTE_AND_BRACE_HELPER.md
integrations/: README.md
llmtk/: __init__.py  cli.py  types.py
manifest/: commands.yaml  templates.yaml  tools.yaml
modules/: analyze.sh  cmake_introspect.sh  compile_db.sh  context-export.sh  dependency_graph.py  deps.sh  diff-context.sh  diff_context.py  doctor.sh  enhanced-install.sh  local-install.sh  lsp_bridge.py  reduce.sh  sarif_converter.py  sarif_merge.py  simple-install.sh  strict_build.py  template_engine.py
presets/: .clang-format  .clang-tidy
scripts/: bench_runner.py  strict_build.py
snap/: build-snap.sh  snapcraft.yaml
(+44 files in other folders)
